using Grpc.Core;

namespace Web.GrpcService.Services;

public class AdviceServiceImpl : AdviceService.AdviceServiceBase
{
    public override Task<AdviceReply> GetAdvice(AdviceRequest request, ServerCallContext context)
    {
        var mood = (request.Mood ?? "").Trim();
        var t = request.Temperature;
        var p = request.Precipitation;

        string advice;

        if (p > 0)
            advice = "YaÄŸmur var ğŸŒ§ï¸ Åemsiye al. Trafikteysen sakin mÃ¼zik iyi gelebilir ğŸ§";
        else if (mood.Equals("Stresli", StringComparison.OrdinalIgnoreCase))
            advice = "Stresliysen trafikte sakin bir playlist aÃ§, kÄ±sa nefes egzersizi dene ğŸ§";
        else if (mood.Equals("Mutlu", StringComparison.OrdinalIgnoreCase) && t >= 22)
            advice = "Hava gÃ¼zel ğŸŒ KÄ±sa bir yÃ¼rÃ¼yÃ¼ÅŸ veya aÃ§Ä±k havada kahve iyi gider.";
        else if (t < 10)
            advice = "Hava soÄŸuk â„ï¸ KalÄ±n giyin, sÄ±cak bir iÃ§ecek iyi gelir.";
        else
            advice = "GÃ¼nÃ¼nÃ¼ planlarken hava durumunu takip etmeyi unutma ğŸ™‚";

        return Task.FromResult(new AdviceReply { Advice = advice });
    }
}
